--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Flowers</h1>
-    <p> flowers are beatiful,tulips make me happy and lilly are cool i love flowers and i alway will. </p> 
+    <p> flowers are beatiful,tulips make me happy and lillys are cool i love flowers and i alway will. </p> 
+    <p>where flowers bloom so does hope</p>
   </body>
 </html>
