--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <html>
+
   <head>
-    <title>Annabel</title>
-    <body style="background-color:pink;">  
-  </head>
- <style>
-
-body {
- 
-  color: blue;
-}
-
-h1 {
-  color:pink;
-}
-</style>
-  <body>
+    "<a href=target="_bhttps://www.roseandblossom.com/info/about-flowers/lank ">another website about flowers </a>"
+    <title>flowers and more</title>
     <h1>Flowers</h1>
-    <h1>A flower, also known as a bloom or blossom, is the reproductive structure found in flowering plants</h1>
-    <p> flowers are beatiful,tulips make me happy and lillys are cool i love flowers and i alway will. </p> 
-    <p>where flowers bloom so does hope</p>
-    <p>facts</p>
-    <ol>
-      <li>Some flowers are carnivorous and trap insects to digest them.</li>
-      <li>Flowers are thermogenic and can generate heat to attract pollinators.</li>
-    </ol>
-  </body>
-   <a href="#">back to the top</a>
+
+  <body style="background-color:pink;">
+
+    </head>
+    <style>
+      body {
+
+        color: blue;
+      }
+
+      h1 {
+        color: purple;
+      }
+
+    </style>
+
+    <body>
+
+      <h1>A flower, also known as a bloom or blossom, is the reproductive structure found in flowering plants</h1>
+      <p> flowers are beatiful,tulips make me happy and lillys are cool i love flowers and i alway will. </p>
+      <p>where flowers bloom so does hope</p>
+      <p>facts</p>
+      <ol>
+        <li>Some flowers are carnivorous and trap insects to digest them.</li>
+        <li>Flowers are thermogenic and can generate heat to attract pollinators.</li>
+      </ol>
+    </body>
+    <a href="#">back to the top</a>
+
 </html>
 <img width=400 src="https://www.thespruce.com/thmb/ZvuUSEbUXewXOq8XTM9cZBdZT98=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/white-flowers-for-your-garden-4122501-hero-ae944c18e42d4956928ea584c8518392.JPG">
