--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <title>flowers and more</title>
     <h1>Flowers</h1>
 
-  <body style="background-color:pink;">
+  <body style="background-color:#FFB7C2;">
 
     </head>
     <style>
       body {
 
-        color: blue;
+        color:#FC6C85;
       }
 
       h1 {
-        color: purple;
+        color:#FF007F;
       }
 
     </style>
@@ -31,7 +31,15 @@
         <li>Flowers are thermogenic and can generate heat to attract pollinators.</li>
       </ol>
     </body>
+    <p>
+    Most flowering plants depend on animals, such as bees, moths, and butterflies, to transfer their pollen between different flowers, and have evolved to attract these pollinators by various strategies, including brightly colored, conspicuous petals, attractive scents, and the production of nectar, a food source for pollinators.[1] In this way, many flowering plants have co-evolved with pollinators to be mutually dependent on services they provide to one another—in the plant's case, a means of reproduction; in the pollinator's case, a source of food.[2]
+
+When pollen from the anther of a flower is deposited on the stigma, this is called pollination. Some flowers may self-pollinate, producing seed using pollen from a different flower of the same plant, but others have mechanisms to prevent self-pollination and rely on cross-pollination, when pollen is transferred from the anther of one flower to the stigma of another flower on a different individual of the same species. Self-pollination happens in flowers where the stamen and carpel mature at the same time, and are positioned so that the pollen can land on the flower's stigma. This pollination does not require an investment from the plant to provide nectar and pollen as food for pollinators.[3] Some flowers produce diaspores without fertilization (parthenocarpy). After fertilization, the ovary of the flower develops into fruit containing seeds.
+
+Flowers have long been appreciated by humans for their beauty and pleasant scents, and also hold cultural significance as religious, ritual, or symbolic objects, or sources of medicine and food.
+    </p>
     <a href="#">back to the top</a>
 
 </html>
 <img width=400 src="https://www.thespruce.com/thmb/ZvuUSEbUXewXOq8XTM9cZBdZT98=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/white-flowers-for-your-garden-4122501-hero-ae944c18e42d4956928ea584c8518392.JPG">
+
