--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>flowers and more</title>
     <h1>Flowers</h1>
 
-  <body style="background-color:#FFB7C2;">
+ 
 
-    </head>
+   
     <style>
       body {
 
@@ -19,9 +19,9 @@
       }
 
     </style>
-
-    <body>
-
+ </head>
+   <body style="background-color:#FFB7C2;">
+ <a href="page2.html"> Go to page 2</a>
       <h1>A flower, also known as a bloom or blossom, is the reproductive structure found in flowering plants</h1>
       <p> flowers are beatiful,tulips make me happy and lillys are cool i love flowers and i alway will. </p>
       <p>where flowers bloom so does hope</p>
@@ -30,7 +30,7 @@
         <li>Some flowers are carnivorous and trap insects to digest them.</li>
         <li>Flowers are thermogenic and can generate heat to attract pollinators.</li>
       </ol>
-    </body>
+   
     <p>
     Most flowering plants depend on animals, such as bees, moths, and butterflies, to transfer their pollen between different flowers, and have evolved to attract these pollinators by various strategies, including brightly colored, conspicuous petals, attractive scents, and the production of nectar, a food source for pollinators.[1] In this way, many flowering plants have co-evolved with pollinators to be mutually dependent on services they provide to one another—in the plant's case, a means of reproduction; in the pollinator's case, a source of food.[2]
 
@@ -40,6 +40,7 @@ Flowers have long been appreciated by humans for their beauty and pleasant scent
     </p>
     <a href="#">back to the top</a>
 
-</html>
-<img width=400 src="https://www.thespruce.com/thmb/ZvuUSEbUXewXOq8XTM9cZBdZT98=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/white-flowers-for-your-garden-4122501-hero-ae944c18e42d4956928ea584c8518392.JPG">
 
+<img width=400 src="https://www.thespruce.com/thmb/ZvuUSEbUXewXOq8XTM9cZBdZT98=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/white-flowers-for-your-garden-4122501-hero-ae944c18e42d4956928ea584c8518392.JPG">
+ </body>
+</html>
