--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
  <a href="page2.html"> Go to page 2</a>
       <h1>A flower, also known as a bloom or blossom, is the reproductive structure found in flowering plants</h1>
       <p> flowers are beatiful,tulips make me happy and lillys are cool i love flowers and i alway will. </p>
-      <img width=
-      
+        <img width=400 src= "https://i.pinimg.com/736x/d5/b0/4e/d5b04e18bd8f161fa2fc804b68640e83.jpg">
       
       <p>where flowers bloom so does hope</p>
       <p>facts</p>
